--- a/WebContent/Profile.html
+++ b/WebContent/Profile.html
@@ -9,18 +9,18 @@
 
 <!-- Form Pendaftaran -->
 <form name= "registration" >
-<span>Username:<input id='id' type="text" name="username" onkeyup='validate("username")' required><label id = "username"></label></span>
-<span><br>Nama Lengkap: <input id="fname" type="text" name="fullname" onkeyup='validate("fullname")' required > <label id = "fullname"></label></span> 
-<span><br>Nomor Handphone:* <input type="text" name="hp" id="nohp"></span>
-<span><br>Email: <input id='mail' type="text" name="email" onkeyup='validate("email")' required><label id = "email"></label></span>
-<span><br>Alamat:* <input type="text" name="alamat"id="alamat"></span>
-<span><br>Provinsi:* <input type="text" name="provinsi"id="provinsi"></span>
-<span><br>Kota/Kabupaten:* <input type="text" name="kecamatan" id="kota"></span>
-<span><br>Kodepos:* <input type="text" name="kodepos"id="kodepos"></span>
-<span><br>Password: <input id="pass" type="password" name="password" onkeyup='validate("password")' required><label id = "password"></label></span> 
-<span><br>Confirm Password: <input type="password" name="confirm" onkeyup='validate("confirm")' required><label id = "confirm"></label></span> 
-<br><input type="button" id="submitbutton" value="Register">
-<p>*optional</p>
+<label>Username: </label><label id="username" >tesusername</label> <br>
+<span>Nama Lengkap: <input type="text" name="fullname" onkeyup='validatep("fullname")' required> <label id = "fullname"></label></span><br> 
+<span>Nomor Handphone:* <input type="text" name="hp" id='nohp'> <br></span>
+<label>Email: </label><label id="email">ini@tes.com</label> <br>
+<span>Alamat:* <input type="text" name="alamat"id='alamat'> <br></span>
+<span>Provinsi:* <input type="text" name="provinsi"id='provinsi'> <br></span>
+<span>Kota/Kabupaten:* <input type="text" name="kota"id='kota'> <br></span>
+<span>Kodepos:* <input type="text" name="kodepos"id='kodepos'> <br></span>
+<span>Password: <input type="password" name="password" onkeyup='validatep("password")' required><label id = "password"></label></span><br> 
+<span>Confirm Password: <input type="password" name="confirm" onkeyup='validatep("confirm")'required><label id = "confirm"></label></span><br>
+<input type="button" onclick="" id="submitbutton" value="Edit Profile">
+<p>*optional</p>	
 </form>
 
 </body>
