Registrasi kartu kredit

--- a/registrasi.html
+++ b/registrasi.html
@@ -41,7 +41,7 @@ function clicked(){
 		{
 			if (xmlhttp.readyState==4) {
 				alert("registrasi berhasil!");
-				document.location.href = "index.jsp";
+				document.location.href = "validateCC.html";
 			}
 		}, document.forms["Registrasi"]
 	);
