Add barang admin, Tambah barang ke cart

--- a/registrasiCC.html
+++ b/registrasiCC.html
@@ -35,7 +35,7 @@
 					<h2>Nama</h2> <input class='textInput'type="text" name="nama"><br><br>
 					<h2>Tanggal Kadaluarsa ("YYYY-MM-DD")</h2> <input class='textInput'type="text" name="tanggal"><br><br>
 					<input class='button' type='button' onclick="validateCC()" value='Submit'></input>
-					<a href = 'index.jsp'><input class='button' type='button' value='Skip'></input></a>
+					<a href = 'index.jsp?kategori=0'><input class='button' type='button' value='Skip'></input></a>
 				</form></li>
 				<li><h2 id="validationResponse"></h2></li>
 			</ul>
